--- a/image_classification/exploration.ipynb
+++ b/image_classification/exploration.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-09T17:31:45.091917800Z",
-     "start_time": "2024-06-09T17:31:39.916155400Z"
+     "end_time": "2024-06-13T19:50:46.647700100Z",
+     "start_time": "2024-06-13T19:50:39.485716100Z"
     }
    },
    "outputs": [
@@ -41,7 +41,9 @@
     "import sklearn.metrics as skm\n",
     "import torch\n",
     "from image_classification.models.cnn import CNN\n",
-    "from weight_init import generic_init\n"
+    "from image_classification.models.mobilenet import Mobilenet\n",
+    "from weight_init import generic_init\n",
+    "import torchvision.models as models"
    ]
   },
   {
@@ -65,8 +67,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-09T17:31:45.107962300Z",
-     "start_time": "2024-06-09T17:31:45.088917100Z"
+     "end_time": "2024-06-13T19:50:46.663912300Z",
+     "start_time": "2024-06-13T19:50:46.651462900Z"
     }
    },
    "id": "cfc411c34272bc3b"
@@ -91,8 +93,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-09T17:31:45.127136800Z",
-     "start_time": "2024-06-09T17:31:45.102425800Z"
+     "end_time": "2024-06-13T19:50:46.687594500Z",
+     "start_time": "2024-06-13T19:50:46.665911400Z"
     }
    },
    "id": "936c1daf3c884602"
@@ -112,20 +114,21 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
+      "Missing logger folder: ./results\\Mobilenet3x-32\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "Loading `train_dataloader` to estimate number of stepping batches.\n",
       "\n",
       "  | Name       | Type                | Params\n",
       "---------------------------------------------------\n",
-      "0 | classifier | Resnet              | 1.3 M \n",
+      "0 | classifier | Mobilenet           | 253 K \n",
       "1 | accuracy   | MulticlassAccuracy  | 0     \n",
       "2 | precision  | MulticlassPrecision | 0     \n",
       "3 | recall     | MulticlassRecall    | 0     \n",
       "---------------------------------------------------\n",
-      "1.3 M     Trainable params\n",
+      "253 K     Trainable params\n",
       "0         Non-trainable params\n",
-      "1.3 M     Total params\n",
-      "5.003     Total estimated model params size (MB)\n"
+      "253 K     Total params\n",
+      "1.014     Total estimated model params size (MB)\n"
      ]
     },
     {
@@ -134,7 +137,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ececea71a12843ab91f6a96b9eca6575"
+       "model_id": "3efb9553180045fa95869609306da1de"
       }
      },
      "metadata": {},
@@ -146,7 +149,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "71ffbd745ffa42c9b3ce4371dd99f32c"
+       "model_id": "27da51fc03da4384a50f39538262e9d9"
       }
      },
      "metadata": {},
@@ -158,7 +161,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ec5d0767c8b645b5a5b8cbf03088c751"
+       "model_id": "a11cfed6b50745e4b49c9722504c60b3"
       }
      },
      "metadata": {},
@@ -170,7 +173,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "276aec8bb84747ce81b61febeb26ce51"
+       "model_id": "eb394db8d42943bca1fad2b8e6cc0963"
       }
      },
      "metadata": {},
@@ -182,7 +185,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "60f5f1d7df6543af9ea2f125c13edad4"
+       "model_id": "a001d57c867d40a3a7f67f1737e2f960"
       }
      },
      "metadata": {},
@@ -194,7 +197,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "2c8bf083c4c1432cb9b255c0a3008155"
+       "model_id": "0fb07b2a67774d868e08808a9c4b4fca"
       }
      },
      "metadata": {},
@@ -206,7 +209,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ab34eac67380410a924900645ff3a0c4"
+       "model_id": "9f6994bada754cd994ad7e2bcbbe30ae"
       }
      },
      "metadata": {},
@@ -218,7 +221,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8c4593fe38524dc888c2e2a264f3a49d"
+       "model_id": "43bafb7a134f4885a51df3a82fce0953"
       }
      },
      "metadata": {},
@@ -230,7 +233,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c4e1f943c2c249509b4a1ffee92d3f76"
+       "model_id": "0533bff45e374fcfa1f56063607e9d79"
       }
      },
      "metadata": {},
@@ -242,7 +245,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ecf18d4da4a04b8da242aa28a996ea33"
+       "model_id": "aee24de867ba4462859a52042156cdb3"
       }
      },
      "metadata": {},
@@ -254,7 +257,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "58548a1756514080921a2e622f457569"
+       "model_id": "d9587466528f45abbf113d4982df5279"
       }
      },
      "metadata": {},
@@ -266,7 +269,127 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "de419f9685804cf6bd88ee7319982630"
+       "model_id": "934a039611a3422b83eac27d69ebc189"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "77c6006c42394fd29735004b555e28ce"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "f3f9eaee33f142ada841ad671d422bda"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "fdc6f60373d04ea8960d5b43b483d19f"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "1af6b0199e014b1b848fb8677fa9685b"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "8db179cc785b4071818c26b7d178e27b"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "751c4132d2444a698b1923fd08e46a17"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "7907707215c945b393063bbc7fe2558d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "a3a974653d0e45f697d423f0efbb497c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "46383a4b3ad14a6486737d5ae81fbda0"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "766388382dd14dce82b6b55b19816c5a"
       }
      },
      "metadata": {},
@@ -276,7 +399,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=10` reached.\n"
+      "`Trainer.fit` stopped: `max_epochs=20` reached.\n"
      ]
     },
     {
@@ -285,31 +408,31 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      " T-shirt/top       0.86      0.83      0.85      1000\n",
-      "     Trouser       0.99      0.98      0.98      1000\n",
-      "    Pullover       0.83      0.87      0.85      1000\n",
-      "       Dress       0.87      0.90      0.88      1000\n",
-      "        Coat       0.80      0.85      0.83      1000\n",
-      "      Sandal       0.97      0.96      0.97      1000\n",
-      "       Shirt       0.73      0.66      0.69      1000\n",
-      "     Sneaker       0.94      0.94      0.94      1000\n",
-      "         Bag       0.99      0.97      0.98      1000\n",
-      "  Ankle boot       0.95      0.96      0.95      1000\n",
+      " T-shirt/top       0.86      0.89      0.88      1000\n",
+      "     Trouser       0.99      0.98      0.99      1000\n",
+      "    Pullover       0.89      0.91      0.90      1000\n",
+      "       Dress       0.92      0.91      0.91      1000\n",
+      "        Coat       0.84      0.92      0.88      1000\n",
+      "      Sandal       0.99      0.95      0.97      1000\n",
+      "       Shirt       0.79      0.68      0.73      1000\n",
+      "     Sneaker       0.92      0.98      0.95      1000\n",
+      "         Bag       0.98      0.99      0.99      1000\n",
+      "  Ankle boot       0.97      0.95      0.96      1000\n",
       "\n",
-      "    accuracy                           0.89     10000\n",
-      "   macro avg       0.89      0.89      0.89     10000\n",
-      "weighted avg       0.89      0.89      0.89     10000\n",
+      "    accuracy                           0.92     10000\n",
+      "   macro avg       0.92      0.92      0.92     10000\n",
+      "weighted avg       0.92      0.92      0.92     10000\n",
       "\n",
-      "[[831   1  17  39   5   1 100   0   6   0]\n",
-      " [  1 982   1  13   2   0   0   0   1   0]\n",
-      " [ 15   0 872  10  57   0  45   0   1   0]\n",
-      " [  5  10   5 896  49   0  34   0   1   0]\n",
-      " [  1   0  66  25 854   0  53   0   1   0]\n",
-      " [  0   0   0   0   0 956   0  33   0  11]\n",
-      " [109   0  91  38  98   0 660   0   4   0]\n",
-      " [  0   0   0   0   0  17   0 941   0  42]\n",
-      " [  2   3   1   4   3   1   9   1 975   1]\n",
-      " [  0   0   0   1   0   6   0  31   0 962]]\n"
+      "[[894   0  19  15   2   1  63   1   5   0]\n",
+      " [  0 976   0  16   2   0   2   0   2   2]\n",
+      " [ 12   2 909   7  41   0  28   0   1   0]\n",
+      " [  6   1   7 911  20   0  53   0   1   1]\n",
+      " [  0   1  28  21 918   0  32   0   0   0]\n",
+      " [  0   0   0   0   0 950   0  43   1   6]\n",
+      " [120   0  61  23 109   0 682   0   5   0]\n",
+      " [  0   0   0   0   0   1   0 983   0  16]\n",
+      " [  3   1   0   1   0   0   0   0 991   4]\n",
+      " [  0   0   0   0   0   6   0  43   1 950]]\n"
      ]
     }
    ],
@@ -318,10 +441,17 @@
     "    'n_features': [\n",
     "        # (4, 8, 16, 32, 64),\n",
     "        # (8, 16, 32, 64, 128),\n",
-    "        (16, 32, 64, 128, 256),\n",
+    "        # (16, 32, 64, 128, 256), # L\n",
+    "        (32, 64, 128, 256, 512),  # XL\n",
     "    ],\n",
-    "    'lr': [1e-3],\n",
-    "    'wd': [1e-5],\n",
+    "    'lr': [\n",
+    "        # 1e-3,\n",
+    "        3e-2,\n",
+    "    ],\n",
+    "    'wd': [\n",
+    "        1e-5,\n",
+    "        # 1e-4,\n",
+    "    ],\n",
     "    'batch_sz': [32]\n",
     "}\n",
     "\n",
@@ -356,12 +486,20 @@
     "    #     use_sepconv=False,\n",
     "    # )\n",
     "\n",
-    "    classifier = Resnet(\n",
+    "    # classifier = Resnet(\n",
+    "    #     n_input_channels=1,\n",
+    "    #     n_classes=n_classes,\n",
+    "    #     n_features=params[\"n_features\"],\n",
+    "    #     n_hidden_layers=128,\n",
+    "    #     use_fft_input=False,\n",
+    "    #     init_weights=True,\n",
+    "    # )\n",
+    "\n",
+    "    classifier = Mobilenet(\n",
     "        n_input_channels=1,\n",
     "        n_classes=n_classes,\n",
     "        n_features=params[\"n_features\"],\n",
     "        n_hidden_layers=128,\n",
-    "        use_fft_input=False,\n",
     "        init_weights=True,\n",
     "    )\n",
     "\n",
@@ -381,12 +519,12 @@
     "        save_last=True,\n",
     "    )\n",
     "\n",
-    "    # experiment_name = f\"Resnet-batch_sz-{params['batch_sz']}-layers\"\n",
-    "    experiment_name = f\"Testing-Refactor\"\n",
+    "    experiment_name = f\"Mobilenet3x-{params['n_features'][0]}\"\n",
+    "    # experiment_name = f\"Testing-Refactor\"\n",
     "    tb_logger = pl_loggers.TensorBoardLogger(save_dir='./results',\n",
     "                                             name=experiment_name,\n",
     "                                             sub_dir=model.classifier.__class__.__name__)\n",
-    "    trainer = pl.Trainer(max_epochs=10,\n",
+    "    trainer = pl.Trainer(max_epochs=20,\n",
     "                         # limit_train_batches=10,\n",
     "                         # limit_val_batches=10,\n",
     "                         callbacks=[\n",
@@ -405,8 +543,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-09T17:38:25.674230900Z",
-     "start_time": "2024-06-09T17:31:45.120624Z"
+     "end_time": "2024-06-13T20:11:35.196623600Z",
+     "start_time": "2024-06-13T19:50:58.978800700Z"
     }
    },
    "id": "c10f9d58693f3c15"
